--- a/idex.html
+++ b/idex.html
@@ -1,5 +1,7 @@
     <title>Jim's Unit 1 Assignment - Problem 1</title>
-    
+
+ <link rel="stylesheet" href="style.css"/>   
+
  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
    crossorigin=""/>
@@ -10,3 +12,8 @@
    crossorigin=""></script>
 
 <div id="mapid"></div>
+
+<body>  
+      <div id="viewDiv"></div>
+      <script src="script.js">/script>
+    </body>
